@@ -1,5 +1,6 @@
 package com.andrewjoel.cms.provider;
 
+import com.andrewjoel.cms.exceptions.CmsException;
 import com.andrewjoel.cms.models.hbm.HbmEntity;
 import com.andrewjoel.cms.models.hbm.HbmProperty;
 import com.andrewjoel.cms.models.hbm.HbmPropertyType;
@@ -7,8 +8,10 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.w3c.dom.Document;
+import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
@@ -17,27 +20,36 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.nio.file.Path;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static com.andrewjoel.cms.utils.CmsConstants.NAME;
+import static com.andrewjoel.cms.utils.CmsConstants.TYPE;
+
 @Component
 public final class CmsEntityTemplate {
     private static final DocumentBuilderFactory DOCUMENT_BUILDER_FACTORY = DocumentBuilderFactory.newInstance();
     private static final Logger LOGGER = LoggerFactory.getLogger(CmsEntityTemplate.class);
 
+    @Value("${spring.jpa.mapping-resources}")
+    private String mappingPath;
+
     public HbmEntity convertXmlToPojo(final String modelName) {
-        // TODO: Handle empty modelName
+        if (StringUtils.isEmpty(modelName)) {
+            throw new CmsException("Model name is empty");
+        }
 
         try {
             final DocumentBuilder documentBuilder = DOCUMENT_BUILDER_FACTORY.newDocumentBuilder();
-            final String modelHbmPath = getClasspathHbmFile(modelName);
+            final String modelHbmPath = getHbmModelPath(modelName);
 
             if (StringUtils.isEmpty(modelHbmPath)) {
+                LOGGER.debug("Model file does not exist in the path: {}", modelHbmPath);
                 return null;
             }
 
@@ -72,18 +84,14 @@ public final class CmsEntityTemplate {
         return null;
     }
 
-    private String getClasspathHbmFile(final String modelName) {
-        assert StringUtils.isNotEmpty(modelName);
+    private String getHbmModelPath(final String modelName) {
+        final String path = mappingPath + modelName + ".hbm.xml";
 
-        try {
-            return Path.of(ClassLoader.getSystemResource("entities/" + modelName + ".hbm.xml")
-                            .toURI())
-                    .toString();
-        } catch (final URISyntaxException uriSyntaxException) {
-            LOGGER.error("Cannot load hbm file: {} due to exception: {}", modelName, ExceptionUtils.getStackTrace(uriSyntaxException));
+        if (Files.notExists(Paths.get(path))) {
+            return StringUtils.EMPTY;
         }
 
-        return StringUtils.EMPTY;
+        return path;
     }
 
     private String findPrimaryKey(final NodeList nodeList) {
@@ -97,8 +105,24 @@ public final class CmsEntityTemplate {
 
     private HbmProperty prepareHbmProperty(final Node node) {
         final HbmProperty property = new HbmProperty();
-        property.setName(node.getAttributes().getNamedItem("name").getTextContent());
-        property.setType(HbmPropertyType.fromString(node.getAttributes().getNamedItem("type").getTextContent()));
+        property.setName(node.getAttributes().getNamedItem(NAME).getTextContent());
+        property.setType(HbmPropertyType.fromString(node.getAttributes().getNamedItem(TYPE).getTextContent()));
+        property.setNullable(node.getAttributes().getNamedItem("not-null").getTextContent()
+                .equals(Boolean.TRUE.toString()));
         return property;
+    }
+
+    public void convertPojoToXml(final HbmEntity entity) {
+        try {
+            final Document document = DOCUMENT_BUILDER_FACTORY.newDocumentBuilder().newDocument();
+            final Element root = document.createElement("hibernate-mapping");
+            final Element classNode = document.createElement("class");
+
+            classNode.setAttribute("entity-name", entity.getClassName());
+            classNode.setAttribute("table", entity.getModelName());
+
+        } catch (final ParserConfigurationException parserConfigurationException) {
+            LOGGER.error("Parser configuration exception: {}", ExceptionUtils.getStackTrace(parserConfigurationException));
+        }
     }
 }
